--- a/src/scss/common/wrapper.scss
+++ b/src/scss/common/wrapper.scss
@@ -1,5 +1,23 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh
+  min-height: 100vh;
+  //overflow-x: hidden;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 99;
+  background: rgba(0,0,0, 0.1);
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.3s ease, opacity 0.3s ease;
+
+  &.active {
+    visibility: visible;
+    opacity: 1;
+  }
 }
